# serializer version: 1
# name: TestCreateGroup.test_ok_and_duplicate[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'legacy_id': None,
        'modify': False,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
    ]),
  })
# ---
# name: TestCreateGroup.test_ok_and_duplicate[obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': False,
    'modify_otu': True,
    'name': 'haematologists',
    'remove': False,
  })
# ---
# name: TestCreateUser.test_ok[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 'fb085f7f',
        'modify': False,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
  })
# ---
# name: TestCreateUser.test_ok[obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 'fb085f7f',
    'modify': False,
    'modify_otu': True,
    'remove': False,
  })
# ---
# name: TestDeleteGroup.test_ok
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
    ]),
  })
# ---
# name: TestDeleteUser.test_ok
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
    ]),
  })
# ---
# name: TestUpdate.test_control[-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': '',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': '',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[None-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-False]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-False].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': 'baz',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-True]
  dict({
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 'foo',
    'imported_from': None,
    'installed': None,
    'internal_control': None,
    'latest_build': None,
    'name': 'Tester',
    'organism': 'virus',
    'otu_count': 0,
    'release': None,
    'remotes_from': None,
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'targets': None,
    'task': None,
    'unbuilt_change_count': 0,
    'updating': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdate.test_control[baz-True].1
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': 'baz',
    'name': 'Tester',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': True,
      }),
    ]),
  })
# ---
# name: TestUpdateGroup.test_ok[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
      dict({
        'build': False,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 1,
        'modify': True,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
    ]),
  })
# ---
# name: TestUpdateGroup.test_ok[obj]
  dict({
    'build': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': True,
    'modify_otu': True,
    'name': 'haematologists',
    'remove': False,
  })
# ---
# name: TestUpdateUser.test_ok[mongo]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'internal_control': None,
    'name': 'Foo',
    'organism': 'virus',
    'restrict_source_types': False,
    'source_types': list([
    ]),
    'user': dict({
      'id': 'bf1b993c',
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'id': 'fb085f7f',
        'modify': True,
        'modify_otu': True,
        'remove': False,
      }),
    ]),
  })
# ---
# name: TestUpdateUser.test_ok[obj_1]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 'fb085f7f',
    'modify': False,
    'modify_otu': False,
    'remove': False,
  })
# ---
# name: TestUpdateUser.test_ok[obj_2]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 'fb085f7f',
    'modify': True,
    'modify_otu': True,
    'remove': False,
  })
# ---
